--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Lab6"]
 	path = Lab6
 	url = git@github.com:Benehiko/FIT2095-Lab6.git
+[submodule "Lab7"]
+	path = Lab7
+	url = git@github.com:Benehiko/FIT2095-Lab7.git
