--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Lab7"]
 	path = Lab7
 	url = git@github.com:Benehiko/FIT2095-Lab7.git
+[submodule "Lab8"]
+	path = Lab8
+	url = git@github.com:Benehiko/FIT2095-Lab8.git
